--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@duskmoon/vue3-typed-js": "^0.0.4",
     "@vueuse/core": "^10.11.0",
     "matter-js": "^0.20.0",
+    "typed.js": "^2.1.0",
     "vue": "^3.4.33",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vue3-typed-ts": "^1.0.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.23.2",
+    "@iconify/json": "^2.2.230",
     "@types/matter-js": "^0.19.7",
     "@unocss/eslint-plugin": "^0.61.5",
     "@unocss/reset": "^0.61.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^9.7.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "typescript": "~5.5.4",
     "unocss": "^0.61.5",
     "unplugin-auto-import": "^0.18.1",
@@ -30,5 +36,10 @@
     "unplugin-vue-router": "^0.10.1",
     "vite": "^5.3.4",
     "vue-tsc": "^2.0.28"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vue3-typed-ts@1.0.4": "patches/vue3-typed-ts@1.0.4.patch"
+    }
   }
 }
